# woohoo_keyboard_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: board.h  debounce.h  firmware_timer.h  key_tracking.h  keyboard_config.h  keyboard_led.h  keyboard_mapping.h  keycode_buffer.h  layer.h  matrix.h  matrix_status.h  ssd1306.h  structs.h  timer.h  ui.h  usb_descriptors.h  util.h
include/ui/: common.h  timer.h  ui.h  ui_structs.h
src/: board.c  firmware_timer.c  key_tracking.c  keyboard_led.c  keycode_buffer.c  layer.c  main.c  matrix.c  sym_defer_pk.c  ui.c  usb_descriptors.c
src/ui/: common.c  timer.c  ui.c
ssd1306/: CMakeLists.txt
ssd1306/lib/: raspberry26x32.h  render_util.h  ssd1306.h  ssd1306_font.h  ssd1306_i2c.h  ssd1306_render_area.h  util.h
ssd1306/src/: main.c  ssd1306_i2c.c  ssd1306_render_area.c  util.c
ssd1306_i2c/: CMakeLists.txt  ssd1306_i2c.c
ws2812/: CMakeLists.txt  ws2812.c
